<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tag1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tag1"
                android:textColor="@android:color/holo_green_light"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ipaddr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789."
                    android:ems="10"
                    android:hint="@string/ipaddr"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/port"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/port"
                    android:inputType="number" />

                <Button
                    android:id="@+id/conn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="connect"
                    android:text="@string/b9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tag2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag2"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/e7"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tag3"
                    android:layout_width="73dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag3"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/loginpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/e1"
                    android:inputType="none|textPassword" />
            </LinearLayout>

            <TextView
                android:id="@+id/LoginRemind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/RegisterBtn"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Register"
                    android:text="@string/b1"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/LoginBtn"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Login"
                    android:text="@string/b2"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tag4"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag4"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/lockpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/e2"
                    android:inputType="textPassword" />
            </LinearLayout>

            <TextView
                android:id="@+id/LockRemind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light" />

            <Button
                android:id="@+id/OpenLockBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="OpenLock"
                android:text="@string/b3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tag8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag8"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tag5"
                    android:layout_width="66dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag5"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/againlpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/e5"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tag6"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag6"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/newlockpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/e6"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tag7"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tag7"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/againnewlpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/e4"
                    android:inputType="textPassword" />
            </LinearLayout>

            <TextView
                android:id="@+id/ResetRemind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light" />

            <Button
                android:id="@+id/ConfirmBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="Confirm"
                android:text="@string/b4"
                android:textSize="18sp" />

            <Button
                android:id="@+id/ExitAppBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="ExitApp"
                android:text="@string/b5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tag9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag9"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/tag10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tag10"
                android:textColor="@android:color/holo_orange_dark" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>